--- a/FigUI/handler/Code/static/code.html
+++ b/FigUI/handler/Code/static/code.html
@@ -255,6 +255,7 @@
         <script src="https://codemirror.net/mode/python/python.js"></script>
         <script src="https://codemirror.net/mode/markdown/markdown.js"></script>
         <script src="https://codemirror.net/mode/css/css.js"></script>
+        <script src="https://codemirror.net/mode/shell/shell.js"></script>
         <script src="https://codemirror.net/addon/lint/coffeescript-lint.js"></script>
         <script src="https://codemirror.net/addon/lint/css-lint.js"></script>
         <script src="https://codemirror.net/addon/lint/html-lint.js"></script>
