--- a/FigUI/handler/Image/static/DELETE.html
+++ b/FigUI/handler/Image/static/DELETE.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <title>0. Design</title>
-        <link type="text/css" href="{{ COLOR_PICKER_CSS }}" rel="stylesheet">
-        <link rel="stylesheet" href="{{ TUI_IMAGE_EDITOR_CSS }}">
+        <link type="text/css" href="https://uicdn.toast.com/tui-color-picker/v2.2.6/tui-color-picker.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://uicdn.toast.com/tui-image-editor/latest/tui-image-editor.css">
         <style>
             /* @import url(http://fonts.googleapis.com/css?family=Noto+Sans); */
             html, body {
@@ -15,11 +15,11 @@
     <body>
 
         <div id="tui-image-editor-container"></div>
-        <script type="text/javascript" src="{{ FABRIC_JS }}"></script>
-        <script type="text/javascript" src="{{ TUI_CODE_SNIPPET_MIN_JS }}"></script>
-        <script type="text/javascript" src="{{ COLOR_PICKER_JS }}"></script>
-        <script type="text/javascript" src="{{ FILE_SAVER_MIN_JS }}"></script>
-        <script src="{{ TUI_IMAGE_EDITOR_JS }}"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.0/fabric.js"></script>
+        <script type="text/javascript" src="https://uicdn.toast.com/tui.code-snippet/v1.5.0/tui-code-snippet.min.js"></script>
+        <script type="text/javascript" src="https://uicdn.toast.com/tui-color-picker/v2.2.6/tui-color-picker.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
+        <script src="https://uicdn.toast.com/tui-image-editor/latest/tui-image-editor.js"></script>
         <!-- <script type="text/javascript" src="./js/theme/white-theme.js"></script>
         <script type="text/javascript" src="./js/theme/black-theme.js"></script> -->
         <script>
@@ -27,8 +27,8 @@
          var imageEditor = new tui.ImageEditor('#tui-image-editor-container', {
              includeUI: {
                  loadImage: {
-                    path: '{{ IMAGE_FILE_PATH }}',
-                    name: '{{ IMAGE_FILE_NAME }}'
+                    path: 'img/sampleImage2.png',
+                    name: 'SampleImage'
                  },
                 //  theme: blackTheme, // or whiteTheme
                  initMenu: 'filter',
