changes in fileviewer and txt editor TBA

--- a/FigUI/handler/Image/static/editor_rendered.html
+++ b/FigUI/handler/Image/static/editor_rendered.html
@@ -13,7 +13,10 @@
         </style>
     </head>
     <body>
-
+        <a href="file:///home/atharva/GUI/FigUI/FigUI/handler/Image/static/viewer_rendered.html">
+            <button>back to viewer</button>
+        </a>
+        <br>
         <div id="tui-image-editor-container"></div>
         <script type="text/javascript" src="file:///home/atharva/GUI/FigUI/FigUI/handler/Image/static/fabric.js"></script>
         <script type="text/javascript" src="file:///home/atharva/GUI/FigUI/FigUI/handler/Image/static/tui-code-snippet.min.js"></script>
@@ -27,8 +30,8 @@
          var imageEditor = new tui.ImageEditor('#tui-image-editor-container', {
              includeUI: {
                  loadImage: {
-                    path: 'file:///home/atharva/GUI/figui_wallpaper_1631084454.509298.jpg',
-                    name: 'figui_wallpaper_1631084454.509298'
+                    path: 'file:///home/atharva/Pictures/secwet/4.jpg',
+                    name: '4'
                  },
                 //  theme: blackTheme, // or whiteTheme
                  initMenu: 'filter',
