--- a/FigUI/handler/Image/static/editor_rendered.html
+++ b/FigUI/handler/Image/static/editor_rendered.html
@@ -30,8 +30,8 @@
          var imageEditor = new tui.ImageEditor('#tui-image-editor-container', {
              includeUI: {
                  loadImage: {
-                    path: 'file:///home/atharva/Pictures/elena_sama_toon.jpg',
-                    name: 'elena_sama_toon'
+                    path: 'file:///home/atharva/dailymlblog.github.io/assets/about/atharva.jpg',
+                    name: 'atharva'
                  },
                 //  theme: blackTheme, // or whiteTheme
                  initMenu: 'filter',
