added timer to clock

--- a/FigUI/subSystem/Clock/static/timer.html
+++ b/FigUI/subSystem/Clock/static/timer.html
@@ -1,6 +1,10 @@
-<div id="machine">
-    <div class="reel"></div>
-    <div class="reel"></div>
-    <div class="reel"></div>
-  </div>
-<div id="outcome"></div>
+<link rel="stylesheet" type="text/css" href="{{ TIMER_CSS }}">
+<div id="ticker">
+    <div class="rotator"></div>
+    <div class="rotator"></div>
+    <div class="rotator"></div>
+    <div id="result"></div>
+</div>
+<script type="text/javascript" src="{{ JQUERY_JS }}"></script>
+<script type="text/javascript" src="{{ JQUERY_MOUSEWHEEL_JS }}"></script>
+<script type="text/javascript" src="{{ TIMER_JS }}"></script>
